# ExcelParser

./: CMakeLists.txt  README.md  images.qrc  main.cpp
assets/: ExcelParser.rc
controls/: CMakeLists.txt  CustomButton.qml  CustomComboBox.qml  CustomPathHolder.qml  CustomRadioButton.qml  CustomScrollBar.qml  CustomTextField.qml
lib/: Logger.hpp  appcore.cpp  appcore.h
lib/excel/: ExcelParser.cpp  ExcelParser.h  excelhelper.cpp  excelhelper.h  xlcell.hpp
lib/model/: BookSheetsModel.cpp  BookSheetsModel.h  ColumnInfo.hpp  bookheetsmodel.cpp  sheetcolumnsmodel.cpp  sheetcolumnsmodel.h
qml/: Logger.qml  LoggerView.qml  main.qml
texts/: CMakeLists.txt  FontLoader.hpp  MediumText.qml  RegularText.qml  TerminalText.qml
themes/: ColorThemes.qml
